--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -1,65 +1,21 @@
 - title: Education
   type: time_table
   contents:
-    - title: Ph.D. in Artifical Intelligence
-      institution: Ajou University, Korea
-      year: 2021
+    - title: Ph.D. in Engineering
+      institution: Seoul National University, Korea
+      year: 2024
       description:
-        - Advised by <a href="https://sites.google.com/site/kasohn/home">Prof. Kyung-Ah Sohn</a>
-        - "Thesis: Toward an Efficient Deep Image Restoration Method"
-    - title: Bachelor of Media in Digital Media
-      institution: Ajou University, Korea
-      year: 2016
+        - Advised by Nojun Kwak
+    - title: Bachelor in Food Science Technology (Minor in Industrial Engineering)
+      institution: Seoul Nation University, Korea
+      year: 2019
 
 - title: Work Experience
   type: time_table
   contents:
-    - title: AI Researcher
-      institution: Webtoon AI, NAVER WEBTOON Corp.
-      year: 2021 - Now
+    - title: Machine Learning Research Engineer
+      institution: Krafton
+      year: 2024.09 - Now
       description:
-        - Research on building user-centric AI tools designed for cartoon creators
-        - Research on making portrait stylization method, WebtoonMe
-        - Research on user privacy-aware generative AI applications
-    - title: Visiting Researcher
-      institution: Clova AI Research, NAVER Corp.
-      year: 2019 - 2020
-      description:
-        - Collaborated with <a href="https://sites.google.com/view/jaejunyoo">Jaejun Yoo</a>, <a href="https://vilab.yonsei.ac.kr/member/professor">Youngjung Uh</a> and <a href="https://yunjey.github.io/">Yunjey Choi</a>
-        - Resarched on developing data augmentation methods for super-resolution
-        - Developed label-efficient conditional generative models
-    - title: Intern
-      institution: Clova AI, NAVER Corp.
-      year: 2018
-      description:
-        - Developed image-to-image translation pipeline for talking head project
-
-- title: Academic Activity
-  type: nested_list
-  contents:
-    - title: <b>Reviewer</b>
-      items:
-        - "<b>Conference</b>: CVPR (2023-2024), ICCV (2023)"
-        - "<b>Journal</b>: TPAMI, TIP, TMM, TCVST, SPIC"
-        - "<b>Workshops</b>: NTIRE (@ CVPR 2022)"
-    - title: <b>Editor</b>
-      items: 
-        - Mathematical Biosciences and Engineering (Guest editor)
-
-- title: Miscellaneous
-  type: nested_list
-  contents:
-    - title: <b>Award</b>
-      items:
-        - <b>N Innovation Award</b>, 3rd prize in R&D track at NAVER, Jan. 2024 (AI Protection team)
-        - <b>N Innovation Award</b>, 2nd prize in R&D track at NAVER, Jan. 2023 (WebtoonMe project)
-        - <b>Honorable Mention Award</b> at NTIRE 2018 Challenge on NTIRE in CVPR workshop
-    - title: <b>Press</b>
-      items:
-        - <a href="https://www.techm.kr/news/articleView.html?idxno=107380">"미국·유럽·일본도 '감탄'...웹툰 AI 시대 열어야죠"</a>, Tech M, Feb. 2023
-        - <a href="https://n.news.naver.com/article/138/0002140131?sid=105">"내 얼굴이 웹툰 캐릭터로 변했다"</a>, Digital Daily, Jan. 2023
-        - <a href="https://www.koreaworldtimes.com/topics/news/12479">"日本のマンガを脅かす韓国発「ウェブトゥーン」 AI等の活用で急追"</a>, KOREA WORLD TIMES, Dec. 2022
-    - title: <b>Teaching</b>
-      items:
-        - <b>Lecture Instructor</b> in Fastcampus (2017). Covered the basics of deep learning and its applications for non majors as well as provided mentoring of term projects
-
+        - On-device agents for gameplay
+        - Retrieval and RAG for question-answering 
