--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -7,7 +7,7 @@
       description:
         - Advised by Nojun Kwak
     - title: Bachelor in Food Science Technology (Minor in Industrial Engineering)
-      institution: Seoul Nation University, Korea
+      institution: Seoul National University, Korea
       year: 2019
 
 - title: Work Experience
