Major update in selected publications, news. - Update author information in _config.yml, add new publications and previews in papers.bib, - adjust news display settings in about.md, and remove outdated publication previews. - add new news posts for joining Krafton and CVPR 2025 acceptance.

--- a/_config.yml
+++ b/_config.yml
@@ -238,8 +238,8 @@ display_tags: ['formatting', 'images', 'links', 'math', 'code'] # these tags wil
 
 scholar:
 
-  last_name: [Ahn]
-  first_name: [Namhyuk]
+  last_name: [Yoo]
+  first_name: [KiYoon]
 
   style: apa
   locale: en
@@ -290,7 +290,7 @@ external_links:
 # -----------------------------------------------------------------------------
 
 imagemagick:
-  enabled: true # enables responsive images for your site (recommended, see https://github.com/alshedivat/al-folio/issues/537)
+  enabled: false # enables responsive images for your site (recommended, see https://github.com/alshedivat/al-folio/issues/537)
   widths:
     - 480
     - 800
